# datalib

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml
tests/: test_data_processing.py  test_statistics.py
