[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"datalib" = ["README.md"]

[metadata]
name = "datalib"
version = "0.1.0"
description = "A simple data manipulation and analysis library"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
author = "Asma Guiza"
author_email = "asma.guiza@ieee.org"
url = "https://github.com/AsmaGuiza/datalib.git"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[options]
packages = find:
python_requires = ">=3.7"
install_requires = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn"
]

[options.extras_require]
dev = [
    "pytest",
    "sphinx",
    "twine"
]

[tool.black]
line-length = 79